repository/repository-server/src/test/resources/models/invalid/InvalidLocation4.fbmodel
vortolang 1.0

namespace com.test.mandatory
version 1.0.0
displayname "InvalidLocation4"
description "Functionblock for Location"

functionblock InvalidLocation4 {
	
	configuration {
	
	}
	
	status {
	  mandatory x as float "Tracks the x axis"
	  mandatory y as float "Tracks the y axis"
	  mandatory z as float "Tracks the z axis"	
	}

}
